2003-04-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/i486/bits/atomic.h: Rename LOCK to LOCK_PREFIX.
	* sysdeps/x86_64/bits/atomic.h: Likewise.

2003-04-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h: Change PUSHARGS_1 and
	POPARGS_1 to emit labels for the mov instructions.

2003-04-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h (ret_NOERRNO): Define.

2003-04-14  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/unwind-dw2.c (_Unwind_GetCFA): Add a cast to silence
	compiler warning.

	* sysdeps/generic/unwind-pe.h: Fix decl hacks broken in merge.

2003-04-14  Ulrich Drepper  <drepper@redhat.com>

	* string/strxfrm.c (STRXFRM): Terminate rulearr at correct
	position.  Reported by jreiser@BitWagon.com.

2003-04-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/unwind-dw2-fde.c: Update from recent gcc version.
	* sysdeps/generic/unwind-dw2-fde.h: Likewise.
	* sysdeps/generic/unwind-dw2.c: Likewise.
	* sysdeps/generic/unwind-pe.h: Likewise.

2003-04-13  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/profil-counter: New.
	* sysdeps/unix/sysv/linux/mips/sigcontextinfo.h: Port to n32/n64.
	* sysdeps/unix/sysv/linux/mips/bits/sigcontext.h: New.
	* sysdeps/unix/sysv/linux/mips/sys/ucontext.h: Port to n32/n64.
	(mcontext_t): Make it match the 32-bit mips kernel in o32.
	* sysdeps/unix/sysv/linux/mips/sys/user.h: Bring in constants from
	the mips and mips64 headers.
	(struct user): Port to n32/n64.

2003-04-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-tls.c (_dl_allocate_tls_init): Add cast to
	avoid warning.

	* sysdeps/unix/sysv/linux/i386/sigaction.c (__libc_sigaction): If
	__ASSUME_VSYSCALL is defined don't add restorer.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_VSYSCALL for 2.5.53.

2003-04-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-start.c: Cleanup MAIN_AUXVEC_ARG handling.